<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/sym_action_call"
                    android:layout_marginRight="15dp"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/callforhelp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mCameraButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:layout_weight="1"

                    android:text="@string/buttonTakePhoto" />

                <Button
                    android:id="@+id/mGalleryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:layout_weight="1"
                    android:text="@string/buttonSelectPhoto" />

            </LinearLayout>


            <TextView
                android:id="@+id/mResultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/defaultImage"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/mPhotoImageView"
                android:layout_width="350dp"
                android:layout_height="400dp"
                android:layout_margin="3dp"
                android:contentDescription="@string/descriptionImage" />

            <Button
                android:id="@+id/mDetectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/buttonDiagnose" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>